Logout Button addition

--- a/chronoroll/index.html
+++ b/chronoroll/index.html
@@ -31,7 +31,6 @@
     }
     .btn-ttc:active {
         color: rgb(255, 255, 255);
-
     }
     .alert-ttc {
         color: #280C3D;
@@ -61,7 +60,7 @@
                                 <h5 class="card-title" id="perfil">username</h5>
                                 <img id="imgperfil" src="https://steemitimages.com/512x512/https://steemitimages.com/DQmb2HNSGKN3pakguJ4ChCRjgkVuDN9WniFRPmrxoJ4sjR4" style="width: 75px; height: 75px; padding: 5px;" class="rounded-circle">
                                 <br />
-                                <a href="/" class="btn btn-ttc">logout</a>
+                                <a href="https://chronocrypto.github.io/chronoroll/" class="btn btn-ttc">logout</a>
                             </div>
                         </div>
                     </div>
